[gd_scene load_steps=4 format=3 uid="uid://bwc2o387frc2f"]

[ext_resource type="Script" path="res://code/common/equipment/tooltip.gd" id="1_beysf"]

[sub_resource type="Gradient" id="Gradient_w78ny"]
colors = PackedColorArray(0.51, 0.30872, 0.1326, 1, 0.32, 0.193707, 0.0832, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_35gcg"]
gradient = SubResource("Gradient_w78ny")
fill_to = Vector2(1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_beysf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 202.0
offset_bottom = 335.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_35gcg")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="TextureRect/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 0.627451, 1)

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ColorRect2" type="ColorRect" parent="TextureRect/VBoxContainer/MarginContainer/ColorRect/MarginContainer2"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/MarginContainer/ColorRect/MarginContainer2/ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -11.5
offset_right = 25.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Item Name"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.27
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="TextureRect/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 0.627451, 1)

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer/MarginContainer2/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ColorRect2" type="ColorRect" parent="TextureRect/VBoxContainer/MarginContainer2/ColorRect/MarginContainer2"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer3" type="MarginContainer" parent="TextureRect/VBoxContainer/MarginContainer2/ColorRect/MarginContainer2/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/MarginContainer2/ColorRect/MarginContainer2/ColorRect2/MarginContainer3"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/MarginContainer2/ColorRect/MarginContainer2/ColorRect2/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "+good thing"
autowrap_mode = 2

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/MarginContainer2/ColorRect/MarginContainer2/ColorRect2/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.32, 0.32, 1)
text = "-debuff"
autowrap_mode = 2

[node name="Label3" type="Label" parent="TextureRect/VBoxContainer/MarginContainer2/ColorRect/MarginContainer2/ColorRect2/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "description"
autowrap_mode = 2
